@@ -13,6 +13,7 @@ XXXX XXX XX Sergey Satskiy <sergey.satskiy@gmail.com>
 * Improvement: diff viewer font is scaled in sync with the main editor
 * Bug fix: VCS annotate in debug mode caused crash
 * Bug fix: newly opened files withing a debug session are editable
+* Removing zoom buttons from the text editor toolbar
 
 2013 Nov 16 Sergey Satskiy <sergey.satskiy@gmail.com>
 
